# CMS

./: CMakeLists.txt  README.md  test
daemon/: Cdaemon.cpp  Cdaemon.h  button_sys.cpp  button_sys.h  daemon.cpp  daemon.h  data_errors.cpp  data_errors.h  door_sys.cpp  door_sys.h  interrupt.h  maind.cpp  motion_sys.cpp  motion_sys.h
ddriver/: relay_dd.c
ddriver/button/: .Module.symvers.cmd  .button.ko.cmd  .button.mod.cmd  .button.mod.o.cmd  .button.o.cmd  .button_dd.o.cmd  .modules.order.cmd  .utils.o.cmd  Makefile  button.ko  button.mod  button.mod.c  button_dd.c  modules.order  utils.h
ddriver/led/: .Module.symvers.cmd  .led.ko.cmd  .led.mod.cmd  .led.mod.o.cmd  .led.o.cmd  .ledmodule.o.cmd  .modules.order.cmd  .utils.o.cmd  Makefile  led.ko  led.mod  led.mod.c  ledmodule.c  modules.order  utils.c  utils.h
ddriver/magnetic/: .Module.symvers.cmd  .magnetic.ko.cmd  .magnetic.mod.cmd  .magnetic.mod.o.cmd  .magnetic.o.cmd  .magnetic_dd.o.cmd  .modules.order.cmd  .utils.o.cmd  Makefile  magnetic.ko  magnetic.mod  magnetic.mod.c  magnetic_dd.c  modules.order  utils.h
ddriver/motion/: .Module.symvers.cmd  .modules.order.cmd  .motion.ko.cmd  .motion.mod.cmd  .motion.mod.o.cmd  .motion.o.cmd  .motion_dd.o.cmd  .utils.o.cmd  Makefile  modules.order  motion.ko  motion.mod  motion.mod.c  motion_dd.c
ddriver/relay/: .Module.symvers.cmd  .modules.order.cmd  .relay.ko.cmd  .relay.mod.cmd  .relay.mod.o.cmd  .relay.o.cmd  .relay_dd.o.cmd  .utils.o.cmd  Makefile  modules.order  relay.ko  relay.mod  relay.mod.c  relay_dd.c  utils.c  utils.h
main/inc/: camera_sys.h  database_sys.h  house_system.h  livestream_ctrl.h  microphone_sys.h  relay_sys.h  speaker_sys.h
main/src/: camera_sys.cpp  database.json  database_sys.cpp  house_system.cpp  livestream_ctrl.cpp  microphone_sys.cpp  py_database.py  relay_sys.cpp  speaker_sys.cpp
src/: camera_sys.cpp  camera_sys.h  house_system.cpp  house_system.h  livestream_ctrl.cpp  livestream_ctrl.h  main.cpp  microphone_sys.cpp  microphone_sys.h  speaker_sys.h
